--- a/ccsd/src/main/resources/application.properties
+++ b/ccsd/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=ccsd
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=root2
-spring.data.mongodb.password=root2
+spring.data.mongodb.username=root
+spring.data.mongodb.password=Arman123
 spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://root:Arman123@mongo:27017/library?authSource=admin
 spring.data.mongodb.database=library
 server.port=8082
 spring.servlet.multipart.enabled=true
