--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,9 +48,9 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root2
-      ME_CONFIG_MONGODB_ADMINPASSWORD: root2
-      ME_CONFIG_MONGODB_URL: mongodb://${root2}:${root2}@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: Arman123
+      ME_CONFIG_MONGODB_URL: mongodb://${root}:${Arman123}@mongo:27017/
       ME_CONFIG_BASICAUTH: false
     networks:
       - mognonetwork
